# crewai_study

./: .gitignore  README.md  example.env  pyproject.toml  report.md
src/crewai_read_email/: crew.py  main.py
src/crewai_read_email/config/: agents.yaml  tasks.yaml
src/crewai_read_email/tools/: custom_gmail_search_tool.py
src/crewai_study/: crew.py  main.py
src/crewai_sum/: crew.py  main.py
src/crewai_sum/config/: agents.yaml  tasks.yaml
